# codereason

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  install.sh  install_deps.sh  install_vex.sh  make.sh  package.sh  recompile.sh
build_for_windows/helpers/: MakeDef.py
capstone-3.0/: capstone-3.0.tgz  setup_capstone.sh
capstone-3.0.3/: capstone-3.0.3.tgz  setup_capstone.sh
debian/: control
docs/: Manual.docx  ROP_In_MSF.docx  gadgets.txt
gauntlet/: RunTests.sh
libs/: CMakeLists.txt
libs/ExprParser/: CMakeLists.txt  ExprAST.h  ExprParser.cpp  ExprParser.h
libs/IR/: BasicIR.cpp  BasicIR.h  CMakeLists.txt  Helpers.cpp  Helpers.h  IR.proto  IRMatcher.cpp  IRMatcher.h  Input.cpp  Input.h  Output.cpp  Output.h  Serial.cpp  Serial.h  VexIR.cpp  VexIR.h  decodeLib.h  decodeToIR.cpp  decodeToIR.h  dumpIRToProto.cpp  printIR.cpp  printOp.cpp
libs/MachOLib/: CMakeLists.txt  DataFile.cpp  dyld_decache.cpp  dyld_decache.h  fat.h  loader.h  mach-o.cc  mach-o.h  machine.h  read_fat.cc  read_fat.h
libs/PELib/: CMakeLists.txt  PeHeader.h  PeLibAux.h
libs/RopLib/: CMakeLists.txt  RopLib.cpp  RopLib.h  RopLib_internal.h
libs/VEE/: CMakeLists.txt  Conditions.cpp  Conditions.h  VEE.cpp  VEE.h  VEECC.cpp  VEEHelpers.cpp  VEEHelpers.h  VEEOps.cpp  VEEOps.h  VEEState.cpp  VEElua.cpp  VEElua.h
libs/getExecSections/: CMakeLists.txt  getExec.cpp  getExec.h  getExec_int.h
libs/pe-parse/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libs/pe-parse/parser-library/: Makefile  cmake_install.cmake  parse.h
lua-5.1.4/src/: CMakeLists.txt  luaconf.h
lua-5.3.0/src/: CMakeLists.txt
scripts/: call_reg.lua  call_reg64.lua  pop_ecx.lua  pvtfinder.lua  pvtfinder2.lua  transfer_arith_with_branch.lua
scripts/arm/: call_reg.lua
scripts/lang/: mem_equiv  mem_equiv_eps  pvtfinder  reg_equiv  reg_equiv_eps  wild_binary_ops  wild_reg_assign
scripts/lang/from_msf/: general_rwrite  general_vwrite
scripts/lang/from_msf/adobe_mp4/: deref_pop_ret
scripts/lang/from_msf/ibm_tivoli/: pop_many_ret
scripts/lang/from_msf/java_docbase_bof/: add_eax_ret  deref_eax  deref_eax4
scripts/lang/from_msf/ms10_002_ie_object/: jmp_eax  pop_eax_ret  pop_ebp_ret  pop_edi_ret  pushad_ret
scripts/lang/from_msf/vlc_amv/: add_xor_inc_ret
scripts/valu/: add.lua  and.lua  div.lua  mul.lua  or.lua  shl.lua  shr.lua  sub.lua  xor.lua
scripts/x86/: call_reg.lua  pop_ecx.lua  pvtdown.lua  pvtfinder2.lua  vcall.lua  vcall2.lua
tests/: Makefile  bigOne.asm  testAdd.asm  testAdd.lua  testAdd64.asm  testAnd.asm  testConds.lua  testDiv.asm  testJ1.asm  testLAdd.asm  testMem.asm  testMul.asm  testMul8.asm  testOr.asm  testSkyWipe.asm  testSub.asm  testWat.asm  testXor.asm
tests/ELF/: ls_x64  ls_x86
tests/MachO/: ls_FAT_x86_x64
tools/: CMakeLists.txt
tools/BlockExtract/: BlockExtract.cpp  CMakeLists.txt
tools/BlockReader/: BlockReader.cpp  CMakeLists.txt
tools/ImgTool/: CMakeLists.txt  ImgTool.cpp
tools/RopScore/: CMakeLists.txt  RopScore.cpp
tools/RopTool/: CMakeLists.txt  RopTool.cpp  RopTool.h
tools/RopTool2/: CMakeLists.txt  RopTool2.cpp
tools/TestLua/: CMakeLists.txt  TestLua.cpp  test.lua
tools/TestParse/: CMakeLists.txt  TestParse.cpp
tools/VEEShell/: CMakeLists.txt  shell.cpp
tools/VEXBlobEater/: CMakeLists.txt  blobEater.cpp  blobeater.h  getopt.h
tools/VEXPEEater/: CMakeLists.txt  eat_pe.cpp  eat_pe.h  getopt.c
tools/VEXPELifter/: CMakeLists.txt  lifter.cpp
tools/test/: CMakeLists.txt  test.cpp
udis86/: CMakeLists.txt  aclocal.m4  configure
udis86/autom4te.cache/: output.0  requests  traces.0  traces.1
udis86/libudis86/: decode.c  decode.h
vexTRUNK/: Makefile  vex
vexTRUNK/.svn/: dir-prop-base  entries
vexTRUNK/auxprogs/.svn/: dir-prop-base  entries
vexTRUNK/docs/.svn/: entries
vexTRUNK/orig_amd64/.svn/: entries
vexTRUNK/orig_arm/.svn/: entries
vexTRUNK/orig_ppc32/.svn/: entries
vexTRUNK/orig_x86/.svn/: entries
vexTRUNK/priv/: guest_amd64_toIR.c  guest_arm_toIR.c  guest_x86_toIR.c  main_globals.h  main_main.c  main_util.c
vexTRUNK/priv/.svn/: entries
vexTRUNK/pub/: libvex.h  libvex_guest_amd64.h  libvex_guest_offsets.h  libvex_guest_x86.h
vexTRUNK/pub/.svn/: dir-prop-base  entries
vexTRUNK/switchback/.svn/: dir-prop-base  entries
vexTRUNK/test/.svn/: entries
vexTRUNK/unused/.svn/: entries
vexTRUNK/useful/.svn/: entries
