add_subdirectory(RopTool)
#add_subdirectory(RopTool2)
add_subdirectory(VEEShell)
#add_subdirectory(VEXBlobEater)
#add_subdirectory(VEXPEEater)
#add_subdirectory(VEXPELifter)
#add_subdirectory(TestLua)
add_subdirectory(TestParse)
add_subdirectory(ImgTool)
#add_subdirectory(test)
add_subdirectory(BlockExtract)
add_subdirectory(BlockReader)
add_subdirectory(RopScore)
